# PyxeeBot-Rust

./: Cargo.toml  LICENSE  README.md  audit.toml  deploy.sh
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
deploy/: musicbot.service  pyxeebotr.service
src/: App.css  App.jsx  bot.rs  components.rs  config.rs  constants.rs  errors.rs  events.rs  lastfm.rs  lib.rs  main.rs  models.rs
src/commands/: admin.rs  curation.rs  helpers.rs  misc.rs  mod.rs  playback.rs  playlist.rs  queue.rs  search.rs
src/db/: mod.rs  queries.rs
src/db/migrations/: 0001_initial.sql  0002_last_voice_channel.sql
src/extraction/: cache.rs  mod.rs  ytdlp.rs
src/player/: actor.rs  lifecycle.rs  mod.rs  queue.rs  snapshot.rs
src/scoring/: factors.rs  mod.rs
tests/: components.rs  db.rs  extraction.rs  player_queue.rs  scoring.rs
