[package]
name        = "pyxeebot"
version     = "0.1.0"
edition     = "2021"
description = "PyxeeBot — Discord music bot"

[lib]
name = "pyxeebot"
path = "src/lib.rs"

[[bin]]
name = "pyxeebot"
path = "src/main.rs"

[dependencies]
# Discord
serenity  = { version = "0.12.5", default-features = false, features = [
    "builder", "cache", "client", "collector", "gateway", "model", "rustls_backend",
] }
poise     = "0.6.2"
songbird  = { version = "0.6.0", default-features = false, features = [
    "serenity", "driver", "gateway", "rustls", "tungstenite",
] }

# Async
tokio = { version = "1.52.3", features = ["full"] }

# Database
sqlx = { version = "0.9.0", features = [
    "sqlite", "runtime-tokio", "macros", "migrate",
] }

# Serialisation
serde      = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# HTTP (Last.fm, etc.) — pinned to the same major version songbird 0.6.0
# depends on internally (reqwest::Client from two different major versions
# are distinct types to the compiler, even with identical names).
reqwest = { version = "0.12", default-features = false, features = [
    "json", "rustls-tls",
] }

# Config
dotenvy = "0.15.7"

# Error handling
anyhow    = "1.0.103"
thiserror = "2.0.18"

# Logging
tracing            = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tracing-appender   = "0.2.3"

# Concurrency / caching
dashmap = "6.2.1"
moka    = { version = "0.12.15", features = ["future", "sync"] }

# Fuzzy matching (scoring engine)
rapidfuzz = "0.5.0"
regex     = "1"
chrono    = { version = "0.4", default-features = false, features = ["clock"] }
rand      = "0.8"

# Required by songbird's own EventHandler trait
async-trait = "0.1"

# Forces the resolver past RUSTSEC-2026-0204 (crossbeam-epoch is pulled in
# transitively by dashmap/moka; this is a normal semver-compatible bump,
# not a hard upstream pin like the audit.toml exceptions below).
crossbeam-epoch = "0.9.20"

[profile.release]
opt-level      = 3
lto            = "thin"
codegen-units  = 1
strip          = "symbols"
